# crm_cli

./: .gitignore  README.md  create_db.py  create_user.py  exceptions.py  main.py  models.py  pyproject.toml  seed.py  user_controller.py  validators.py
config/: console.py  sentry_logging.py
controllers/: auth_controller.py  client_controller.py  contract_controller.py  event_controller.py  menu_controller.py  user_controller.py
controllers/repositories/: client_repository.py  contract_repository.py  event_repository.py  user_repository.py
controllers/services/: auth.py  authorization.py  token_cache.py
controllers/validators/: validators.py
database/: create_db.py  session.py
models/: client.py  contract.py  event.py  user.py  user_role.py
repositories/: user_repository.py
services/: auth.py  token_cache.py
tests/: conftest.py
tests/integration/: test_commercial_workflow.py  test_e2e_cross_role_workflow.py  test_gestion_user_workflow.py
tests/unit/: test_auth.py  test_auth_view.py  test_authorization.py  test_base_view.py  test_client_controller.py  test_client_repository.py  test_client_view.py  test_contract_controller.py  test_contract_repository.py  test_contract_view.py  test_event_controller.py  test_event_repository.py  test_event_view.py  test_menu.py  test_menu_controller.py  test_menu_view.py  test_token_cache.py  test_user_controller.py  test_user_repository.py  test_user_view.py  (+1 more)
validators/: user_validators.py
views/: auth_view.py  base.py  client_view.py  contract_view.py  event_view.py  menu.py  menu_view.py  user_view.py
